# nycu-cv

./: .pre-commit-config.yaml  Dockerfile  README.md
.devcontainer/: devcontainer.json
hw1/: setup.py
hw2/: .gitignore  README.md  requirements.txt  settings.toml  setup.py
hw2/data/: README.md
hw2/nycu_cv_hw2/: config.py  constants.py  data.py  eval.py  exceptions.py  pre.py  predictor.py  test.py  train.py  trainer.py  utils.py
hw3/: .gitignore  README.md  pyproject.toml  requirements.txt  settings.toml
hw3/nycu_cv_hw3/: constants.py  data.py  inference.py  models.py  train.py  trainer.py  utils.py
hw4/: .gitignore  README.md  requirements.txt  settings.toml
hw4/nycu_cv_hw4/: constants.py  data.py  inference.py  inference2.py  model.py  train.py  trainer.py  utils.py
